--- a/aboutme.html
+++ b/aboutme.html
@@ -31,7 +31,7 @@
   through both self studying and computer science courses. In my free time, I like to figure skate, ride horses, and journal the dreams that I can remember. 
 <br>
 </p>
-<img src="me2.png" alt="me2"> 
+<img src="me.jpg" alt="me2"> 
 </div>
  </body>
  <footer>
