--- a/aboutme.html
+++ b/aboutme.html
@@ -26,9 +26,7 @@
 
  
  <p>
- I am a very ambitious and hardworking first year student at Colorado College with a dream to succeed in the technology industry.
- I am incredibly excited for an upcoming Business Analyst Intern position with Lockheed Martin Space at the Highlands Ranch location and I have experience in computer science
-  through both self studying and computer science courses. In my free time, I like to figure skate, ride horses, and journal the dreams that I can remember. 
+ My name is Conor Wellman. I'm an aspiring software engineer studying Computer Science and Mathematics at Colorado College. I've worked as a software engineering at Connamara Technolgies, and as a research assistant in the field of complex analysis, where I discovered a new family of harmonic mappings. I'm looking forward to working at NIST this summer as part of the SURF program to develop software for the atomic clock system! In my free time, I pursue rock climbing at a semi-professional level and play guitar. 
 <br>
 </p>
 <img src="me.jpg" alt="me"> 
