--- a/aboutme.html
+++ b/aboutme.html
@@ -33,6 +33,6 @@
 </div>
  </body>
  <footer>
-  © Copyright Kalie Chang. For business inquiries, please contact at kaliechang10847@gmail.com. Last updated March 2023.
+  © Copyright Conor Wellman. For business inquiries, please contact at conwellman@gmail.com. Last updated May 2024.
 </footer>
 </html>
