--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <DOCTYPE html>
   <html>
-</head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <head>
+   <link rel="stylesheet" type="text/css" href="style.css">
+  
+  <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- displays site properly based on user's device -->
+   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+    <link rel="stylesheet" href="./assets/css/styles.css">
+  
+ </head>
 <body>
 <div id = "mybar">
   <ul class = "nav">
