--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
     <li><a href= "other.html">Other </a> </li>
   </ul>
 
-</div>
-  Home
-</div>
-  <p>
-    Hi, I'm Conor Wellman!
-  </p>
-    
-</body>
 
+ <p>
+ My name is Conor Wellman. I'm an aspiring software engineer studying Computer Science and Mathematics at Colorado College. I've worked as a software engineering at Connamara Technolgies, and as a research assistant in the field of complex analysis, where I discovered a new family of harmonic mappings. I'm looking forward to working at NIST this summer as part of the SURF program to develop software for the atomic clock system! In my free time, I pursue rock climbing at a semi-professional level and play guitar. 
+<br>
+</p>
+ <img src="me1.png" alt="me1">
+<img src="me.jpg" alt="me"> 
+</div>
+ </body>
 
-<footer>
-  Copyright Conor Wellman. Last Updated May 2024
+ <footer>
+  © Copyright Conor Wellman. For business inquiries, please contact at conwellman@gmail.com. Last updated May 2024.
 </footer>
 
     </html>
