--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <div id = "mybar">
   <ul class = "nav">
-    <li><a href= "aboutme.html">About Me </a> </li>
+    <li><a href= "aboutme">About Me </a> </li>
     <li><a href= "projects.html">Projects </a> </li>
     <li><a href= "contacts.html">Contacts </a> </li>
     <li><a href= "reume.html">Resume </a> </li>
