--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
 </div>
 </div>
   </div>
-  <div class="column"></div>
+  <div class="column">
+    <h1> Projects </h1>
+    <h1> Resume </h1>
+    <h1> Contact </h1>
+    <h1> Other </h1>
+  </div>
 </div>
 
 
