--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
   </div>
   <div class="column">
     <h1> Projects </h1>
+      <button type="button" class="prjct-btn"> AI Chatbot Website </button>
+      <button type="button" class="prjct-btn"> 8a.nu User Softness Calculator </button>
+      <button type="button" class="prjct-btn"> DreamTeam Workout App </button>
+      <button type="button" class="prjct-btn"> Clustering Algorithms </button>
+      <button type="button" class="prjct-btn"> Wordle Solver </button>
     <h1> Resume </h1>
     <h1> Contact </h1>
     <h1> Other </h1>
