--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  </head>
 <body>
   <div class="row">
-  <div class="column">
+  <div class="column left">
     <div id = "mybar">
   <ul class = "nav">
     <li><a href= "projects.html">Projects </a> </li>
@@ -31,7 +31,7 @@
 </div>
 </div>
   </div>
-  <div class="column">
+  <div class="column right">
     <h1> Projects </h1>
       <button type="button" class="prjct-btn"> AI Chatbot Website </button>
       <button type="button" class="prjct-btn"> 8a.nu User Softness Calculator </button>
