--- a/index.html
+++ b/index.html
@@ -34,12 +34,17 @@
   <div class="column right">
     <h1> Projects </h1>
       <button type="button" class="prjct-btn"> AI Chatbot Website </button>
-        <p
+        <p> AI chatbot website developed as part of the LevelUp Program at Colorado College. Uses Django Framework with HuggingFace AI library.</p>
       <button type="button" class="prjct-btn"> 8a.nu User Softness Calculator </button>
+        <p> Rock climbing is a sport with no referees, and the difficulty of each route is considered subjective. Uses Selenium Webdriver to establish a database of climbers and their likelihood to suggest a higher or lower grade than the average for each outdoor climb using data from 8a.nu</p>
       <button type="button" class="prjct-btn"> DreamTeam Workout App </button>
+        <p>Final project for CP274 Software Deisgn at Colorado College. Written in Java and using a MySQL database, this application allows users to track and share workout information with friends. The app also implements the ChatGPT API for workout reccomendations.</p>
       <button type="button" class="prjct-btn"> Clustering Algorithms </button>
+        <p>Final project for CP307 Data Structures and Algorithms. In a group, we impolemented and tested a variety of clustering alogrithms, including DBScan, Spectral Clustering, Hierarchical Clustering, and K-Means Clustering</p>
       <button type="button" class="prjct-btn"> Wordle Solver </button>
+        <p>Final project for CP222 Computer Science 2. In a group, we implemented and tested multiple algorithms for solving the New York Times "Wordle" game.</p>
     <h1> Resume </h1>
+      
     <h1> Contact </h1>
     <h1> Other </h1>
   </div>
