--- a/index.html
+++ b/index.html
@@ -10,6 +10,29 @@
    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
     <link rel="stylesheet" href="./assets/css/styles.css">
 
+   <style>
+* {
+  box-sizing: border-box;
+}
+.column {
+  float: left;
+  padding: 10px;
+}
+
+.left {
+  width: 25%;
+}
+
+.right {
+  width: 75%;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+</style>
  </head>
 <body>
   <div class="row">
@@ -47,7 +70,6 @@
     <h1> Other </h1>
   </div>
 </div>
-
 
 
  </body>
