--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
      where I discovered a new family of harmonic mappings. I'm looking forward to working at NIST this summer as part of the SURF program 
     to develop software for the atomic clock system! In my free time, I pursue rock climbing at a semi-professional level and play guitar. 
    </p>
-   <img src="me1.png" alt="me1">
-  <img src="me.jpg" alt="me"> 
+   <img src="me1.png" alt="me1" class ="center">
+  <img src="me.jpg" alt="me" class ="center"> 
   </div>
 </div>
   <div class="column right">
