--- a/index.html
+++ b/index.html
@@ -46,13 +46,15 @@
     </ul>
   </div>
 
-  <div id = "fixed-info">
+  
     <br>
     <br>
     <br>
     <br>
     <br>
-   <p> My name is Conor Wellman. I'm an aspiring software engineer studying Computer <br>
+    <br>
+    <br>
+   <p position: "fixed"> My name is Conor Wellman. I'm an aspiring software engineer studying Computer <br>
      Science and Mathematics at Colorado College. I've worked as a software engineering <br> 
      at Connamara Technolgies, and as a research assistant in the field of complex analysis, <br>
      where I discovered a new family of harmonic mappings. I'm looking forward to working <br>
@@ -62,7 +64,7 @@
    </p>
    <img src="me1.png" alt="me1" class ="center">
   <img src="me.jpg" alt="me" class ="center"> 
-  </div>
+  
 </div>
   <div class="column right">
     <h1> Projects </h1>
