--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <br>
     <br>
     <br>
-   <p position: "fixed"> My name is Conor Wellman. I'm an aspiring software engineer studying Computer <br>
+   <p position: fixed> My name is Conor Wellman. I'm an aspiring software engineer studying Computer <br>
      Science and Mathematics at Colorado College. I've worked as a software engineering <br> 
      at Connamara Technolgies, and as a research assistant in the field of complex analysis, <br>
      where I discovered a new family of harmonic mappings. I'm looking forward to working <br>
@@ -62,8 +62,8 @@
      clock system! In my free time, I pursue rock climbing at a semi-professional level <br>
      and play guitar. 
    </p>
-   <img src="me1.png" alt="me1" class ="center">
-  <img src="me.jpg" alt="me" class ="center"> 
+   <img src="me1.png" alt="me1" class ="center" position: fixed>
+  <img src="me.jpg" alt="me" class ="center" position: fixed> 
   
 </div>
   <div class="column right">
