--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 <div class="column left">
   <div id = "mybar">
     <ul class = "nav">
-      <li><a href= "projects.html">Projects </a> </li>
-      <li><a href= "contacts.html">Contacts </a> </li>
-      <li><a href= "reume.html">Resume </a> </li>
-      <li><a href= "other.html">Other </a> </li>
+      <li><a href= "projects">Projects </a> </li>
+      <li><a href= "contacts">Contacts </a> </li>
+      <li><a href= "resume">Resume </a> </li>
+      <li><a href= "other">Other </a> </li>
     </ul>
   </div>
 
@@ -66,21 +66,28 @@
   
 </div>
   <div class="column right">
-    <h1> Projects </h1>
-      <button type="button" class="prjct-btn"> AI Chatbot Website </button>
-        <p> AI chatbot website developed as part of the LevelUp Program at Colorado College. Uses Django Framework with HuggingFace AI library.</p>
-      <button type="button" class="prjct-btn"> 8a.nu User Softness Calculator </button>
-        <p> Rock climbing is a sport with no referees, and the difficulty of each route is considered subjective. Uses Selenium Webdriver to establish a database of climbers and their likelihood to suggest a higher or lower grade than the average for each outdoor climb using data from 8a.nu</p>
-      <button type="button" class="prjct-btn"> DreamTeam Workout App </button>
-        <p>Final project for CP274 Software Deisgn at Colorado College. Written in Java and using a MySQL database, this application allows users to track and share workout information with friends. The app also implements the ChatGPT API for workout reccomendations.</p>
-      <button type="button" class="prjct-btn"> Clustering Algorithms </button>
-        <p>Final project for CP307 Data Structures and Algorithms. In a group, we impolemented and tested a variety of clustering alogrithms, including DBScan, Spectral Clustering, Hierarchical Clustering, and K-Means Clustering</p>
-      <button type="button" class="prjct-btn"> Wordle Solver </button>
-        <p>Final project for CP222 Computer Science 2. In a group, we implemented and tested multiple algorithms for solving the New York Times "Wordle" game.</p>
-    <h1> Resume </h1>
-      
-    <h1> Contact </h1>
-    <h1> Other </h1>
+    <div id = "projects">
+      <h1> Projects </h1>
+        <button type="button" class="prjct-btn"> AI Chatbot Website </button>
+          <p> AI chatbot website developed as part of the LevelUp Program at Colorado College. Uses Django Framework with HuggingFace AI library.</p>
+        <button type="button" class="prjct-btn"> 8a.nu User Softness Calculator </button>
+          <p> Rock climbing is a sport with no referees, and the difficulty of each route is considered subjective. Uses Selenium Webdriver to establish a database of climbers and their likelihood to suggest a higher or lower grade than the average for each outdoor climb using data from 8a.nu</p>
+        <button type="button" class="prjct-btn"> DreamTeam Workout App </button>
+          <p>Final project for CP274 Software Deisgn at Colorado College. Written in Java and using a MySQL database, this application allows users to track and share workout information with friends. The app also implements the ChatGPT API for workout reccomendations.</p>
+        <button type="button" class="prjct-btn"> Clustering Algorithms </button>
+          <p>Final project for CP307 Data Structures and Algorithms. In a group, we impolemented and tested a variety of clustering alogrithms, including DBScan, Spectral Clustering, Hierarchical Clustering, and K-Means Clustering</p>
+        <button type="button" class="prjct-btn"> Wordle Solver </button>
+          <p>Final project for CP222 Computer Science 2. In a group, we implemented and tested multiple algorithms for solving the New York Times "Wordle" game.</p>
+    </div>
+    <div id="resume">
+      <h1> Resume </h1>
+    </div>
+    <div id="contact">
+      <h1> Contact </h1>
+    </div>
+    <div id="other">
+      <h1> Other </h1>
+    </div>
   </div>
 </div>
 
