--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 <div class="column left">
   <div id = "mybar">
     <ul class = "nav">
-      <li><a href= "projects">Projects </a> </li>
-      <li><a href= "contacts">Contacts </a> </li>
-      <li><a href= "resume">Resume </a> </li>
-      <li><a href= "other">Other </a> </li>
+      <li><a href="#"id="projects">Projects </a> </li>
+      <li><a href="#"id= "contacts">Contacts </a> </li>
+      <li><a href="#"id= "resume">Resume </a> </li>
+      <li><a href="#"id= "other">Other </a> </li>
     </ul>
   </div>
 
