--- a/index.html
+++ b/index.html
@@ -40,8 +40,27 @@
   <div id = "mybar">
     <ul class = "nav">
       <li><a href="#"id="projects">Projects </a> </li>
-      <li><a href="#"id= "contacts">Contacts </a> </li>
       <li><a href="#"id= "resume">Resume </a> </li>
+       <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br> <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br> <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+      <li><a href="#"id= "contacts">Contact </a> </li>
       <li><a href="#"id= "other">Other </a> </li>
     </ul>
   </div>
