--- a/index.html
+++ b/index.html
@@ -35,18 +35,16 @@
 </style>
  </head>
 <body>
-<div class="row">
-<div class="column left">
   <div id = "mybar">
     <ul class = "nav">
       <li><a href="#"id="projects">Projects </a> </li>
-      <li><a href="#"id= "resume">Resume </a> </li>
-      <li><a href="#"id= "contacts">Contact </a> </li>
-      <li><a href="#"id= "other">Other </a> </li>
+      <li><a href="#"id="resume">Resume </a> </li>
+      <li><a href="#"id="contact">Contact </a> </li>
+      <li><a href="#"id="other">Other </a> </li>
     </ul>
   </div>
-
-  
+<div class="row">
+<div class="column left">
     <br>
     <br>
     <br>
