--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 <body>
   <div id = "mybar">
     <ul class = "nav">
-      <li><a href="#"id="projects">Projects </a> </li>
-      <li><a href="#"id="resume">Resume </a> </li>
-      <li><a href="#"id="contact">Contact </a> </li>
-      <li><a href="#"id="other">Other </a> </li>
+      <li><a href="#projects">Projects </a> </li>
+      <li><a href="#resume">Resume </a> </li>
+      <li><a href="#contact">Contact </a> </li>
+      <li><a href="#other">Other </a> </li>
     </ul>
   </div>
 <div class="row">
