--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 <body>
   <div id = "mybar">
     <ul class = "nav">
-      <li><a href="#projects">Projects </a> </li>
-      <li><a href="#resume">Resume </a> </li>
-      <li><a href="#contact">Contact </a> </li>
-      <li><a href="#other">Other </a> </li>
+      <a href="#projects">Projects </a> 
+      <a href="#resume">Resume </a>
+      <a href="#contact">Contact </a> 
+      <a href="#other">Other </a> 
     </ul>
   </div>
 <div class="row">
