--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <br>
     <br>
   <div id="fixed-text">
-   <p position: fixed> My name is Conor Wellman. I'm an aspiring software engineer studying Computer
+   <p> My name is Conor Wellman. I'm an aspiring software engineer studying Computer
      Science and Mathematics at Colorado College. I've worked as a software engineering 
      at Connamara Technolgies, and as a research assistant in the field of complex analysis,
      where I discovered a new family of harmonic mappings. I'm looking forward to working 
