--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <button type="button" class="prjct-btn"> DreamTeam Workout App </button>
           <p>Final project for CP274 Software Deisgn at Colorado College. Written in Java and using a MySQL database, this application allows users to track and share workout information with friends. The app also implements the ChatGPT API for workout reccomendations.</p>
         <button type="button" class="prjct-btn"> Clustering Algorithms </button>
-          <p>Final project for CP307 Data Structures and Algorithms. In a group, we impolemented and tested a variety of clustering alogrithms, including DBScan, Spectral Clustering, Hierarchical Clustering, and K-Means Clustering</p>
+          <p>Final project for CP307 Data Structures and Algorithms. In a group, we implemented and tested a variety of clustering alogrithms, including DBScan, Spectral Clustering, Hierarchical Clustering, and K-Means Clustering</p>
         <button type="button" class="prjct-btn"> Wordle Solver </button>
           <p>Final project for CP222 Computer Science 2. In a group, we implemented and tested multiple algorithms for solving the New York Times "Wordle" game.</p>
     </div>
