--- a/index.html
+++ b/index.html
@@ -32,12 +32,7 @@
   display: table;
   clear: both;
 }
-
- .fixed-text{
-  positon: fixed;
-  text-align: center;
-  width:40%;
-}    
+  
 
 </style>
  </head>
@@ -59,7 +54,7 @@
     <br>
     <br>
     <br>
-     <p class="fixed-text"> My name is Conor Wellman. I'm an aspiring software engineer studying Computer
+     <p id="fixed-text"> My name is Conor Wellman. I'm an aspiring software engineer studying Computer
        Science and Mathematics at Colorado College. I've worked as a software engineering 
        at Connamara Technolgies, and as a research assistant in the field of complex analysis,
        where I discovered a new family of harmonic mappings. I'm looking forward to working 
