--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
     </div>
     <div id="contact">
       <h1> Contact </h1>
-      <a href="https://www.linkedin.com/in/conor-wellman-a70a93115/"> LinkedIn </a>
-      <a href="https://github.com/conorwell"> Github </a>
+      <a href="https://www.linkedin.com/in/conor-wellman-a70a93115/"> LinkedIn </a> <br>
+      <a href="https://github.com/conorwell"> Github </a> <br>
       <p> Email: conwellman@gmail.com </p>
     </div>
     <div id="other">
