--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 <body>
   <div id = "mybar">
     <ul class = "nav">
-      <a href="#projects">  Projects  </a> 
-      <a href="#resume">  Resume  </a>
-      <a href="#contact">  Contact  </a> 
+      <a href="#projects">  Projects  |</a> 
+      <a href="#resume">  Resume  |</a>
+      <a href="#contact">  Contact  |</a> 
       <a href="#other">  Other  </a> 
     </ul>
   </div>
