--- a/index.html
+++ b/index.html
@@ -84,8 +84,12 @@
     </div>
     <div id="contact">
       <h1> Contact </h1>
-      <a href="https://www.linkedin.com/in/conor-wellman-a70a93115/"> LinkedIn </a> <br> <br>
-      <a href="https://github.com/conorwell"> Github </a> <br>
+      <a href="https://www.linkedin.com/in/conor-wellman-a70a93115/"> 
+        <button type="button" class="prjct-btn"> LinkedIn </button> 
+      </a> <br> <br>
+      <a href="https://github.com/conorwell"> 
+        <button type="button" class="prjct-btn"> Github </button>
+      </a> <br>
       <p> Email: conwellman@gmail.com </p>
     </div>
     <div id="other">
