--- a/index.html
+++ b/index.html
@@ -111,8 +111,21 @@
       </a> <br>
       <p> Email: conwellman@gmail.com </p>
     </div>
+      
     <div id="other">
       <h1> Other </h1>
+      <h2> Awards</h2>
+      <p>Phi Beta Kappa Honor Society Member <br>
+      Dean's List Student <br>
+      USA Climbing Collegiate Ambassador Scholarship <br>
+      Colorado College Leadership Scholarship</p>
+      <h2>Climbing</h2>
+      <p>I spend most of my free time focusing on my climbing career. I've been lucky enough to compete in national finals 
+        for lead climbing and bouldering, earning an alternate spot on the US Team and a pass down invite to world championships.
+      Outdoors, I have climbed routes up to V14 and 5.14, my proudest being "The Multiverse" (V14) and "The Phoenix" (V14). I am the first
+      male from Illinois to achieve boulders of this difficulty.</p>
+      <img src="multiverse.png" alt="multiverse" class ="center">
+      <img src="phoenix.png" alt="phoenix" class ="center">
     </div>
   </div>
 </div>
