--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
         for lead climbing and bouldering, earning an alternate spot on the US Team and a pass down invite to world championships.
       Outdoors, I have climbed routes up to V14 and 5.14, my proudest being "The Multiverse" (V14) and "The Phoenix" (V14). I am the first
       male from Illinois to achieve boulders of this difficulty.</p>
-      <img src="multiverse.png" alt="multiverse" class ="center">
-      <img src="phoenix.png" alt="phoenix" class ="center">
+      <img src="multiverse.jpeg" alt="multiverse" class ="center">
+      <img src="phoenix.jpeg" alt="phoenix" class ="center">
     </div>
   </div>
 </div>
