--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
   <div id="fixed-imgs">
     <p> My name is Conor Wellman. I'm an aspiring software engineer studying Computer
        Science and Mathematics at Colorado College. I've worked as a software engineering 
-       at Connamara Technolgies, and as a research assistant in the field of complex analysis,
-       where I discovered a new family of harmonic mappings. I'm looking forward to working 
+       at Connamara Technologies, and as a research assistant in the field of complex analysis,
+       where I discovered a new family of harmonic mappings andm inimal surfaces. I'm looking forward to working 
        at NIST this summer as part of the SURF program to develop software for the atomic clock 
        system! In my free time, I pursue rock climbing at a semi-professional level and play guitar. 
      </p>
@@ -122,11 +122,11 @@
       Colorado College Leadership Scholarship</p>
 
       <h2>Mathematics</h2>
-      <p>In the summer of 2023, I worked with Professor Jane McDougall to research Rosettee Harmonic Mappings within the field of Complex Analysis. 
+      <p>In the summer of 2023, I worked with Professor Jane McDougall to research Rosette Harmonic Mappings within the field of Complex Analysis. 
       During this reasearch, I was able to discover and print a new family of Generalized Rosette Harmonic Mappings, which I have presented at
         various symposiums in Colorado.
         </p>
-      <img src="symposium.jpeg" alt="symposium" class = "center">
+      <img src="symposium.jpg" alt="symposium" class = "center">
       
       <h2>Climbing</h2>
       <p>I spend most of my free time focusing on my climbing career. I've been lucky enough to compete in national finals 
