--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <div id="fixed-imgs">
     <h1>Conor Wellman</h1>
     <p>I'm an aspiring software engineer studying Computer
-       Science and Mathematics at Colorado College. I've worked as a software engineering 
+       Science and Mathematics at Colorado College. I've worked as a software engineering intern
        at Connamara Technologies, and as a research assistant in the field of complex analysis,
        where I discovered a new family of harmonic mappings and minimal surfaces. I'm looking forward to working 
        at NIST this summer as part of the SURF program to develop software for the atomic clock 
