--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
      </p>
    <img src="me1.png" alt="me1" class ="center" position: fixed>
   </div>
-  <button type="button" class="social-btn"> <img src="github.png" alt="github" position: fixed> </button>
-  <button type="button" class="social-btn"> <img src="linkedin.png" alt="github" position: fixed> </button>
-  <button type="button" class="social-btn"> <img src="instagram.png" alt="github" position: fixed> </button>
+  <button type="button" class="social-btn"> <img src="github.png" alt="github" class="logo" position: fixed> </button>
+  <button type="button" class="social-btn"> <img src="linkedin.png" alt="github" class="logo" position: fixed> </button>
+  <button type="button" class="social-btn"> <img src="instagram.png" alt="github" class="logo" position: fixed> </button>
 </div>
   <div class="column right">
     <div id = "projects">
