--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div id = "mybar">
     <ul class = "nav">
       <a href="#projects">  Projects  |</a> 
-      <a href="#resume">  Resume  |</a>
+      <a href="#resume">  Experience  |</a>
       <a href="#contact">  Contact  |</a> 
       <a href="#other">  Other  </a> 
     </ul>
@@ -99,9 +99,9 @@
       </button></a>
       
     <div id="resume">
-      <h1> Resume </h1>
+      <h1> Experience </h1>
       <a href="https://drive.google.com/file/d/1jpM2Guj6gEvp9PBvUcPtXHvNrkmSd9TN/view?usp=sharing"> 
-        <button type="button" class="prjct-btn"> Resume </button>
+        <button type="button" class="prjct-btn"> <h2>View Full Resume</h2> </button>
       </a>
     </div>
     <div id="contact">
