--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
      </p>
    <img src="me1.png" alt="me1" class ="center" position: fixed>
     
-    <button type="button" class="social-btn"> <img src="github.png" alt="github" class="logo" position: fixed> </button>
-  <button type="button" class="social-btn"> <img src="linkedin.png" alt="github" class="logo" position: fixed> </button>
-  <button type="button" class="social-btn"> <img src="instagram.png" alt="github" class="logo" position: fixed> </button>
+    <button class="social-btn"> <i class="fa-brands fa-github"></i> </button>
+  <button class="social-btn"> <i class="fa-brands fa-linkedin"></i> </button>
+  <button class="social-btn"> <i class="fa-brands fa-instagram"></i> </button>
   </div>
 </div>
   <div class="column right">
