--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
    <img src="me1.png" alt="me1" class ="center" position: fixed>
     <br>
     <a href="https://github.com/conorwell"> 
-    <button class="social-btn"> <i class="fa-brands fa-github"></i> </button>
+    <button class="social-btn"> <i class="fa-brands fa-github"> Github </i> </button>
     </a>
 
     <a href="https://www.linkedin.com/in/conor-wellman-a70a93115/"> 
-    <button class="social-btn"> <i class="fa-brands fa-linkedin"></i> </button>
+    <button class="social-btn"> <i class="fa-brands fa-linkedin"> LinkedIn</i> </button>
     </a>
 
     <a href="https://www.instagram.com/conorwell/">
-  <button class="social-btn"> <i class="fa-brands fa-instagram"></i> </button>
+  <button class="social-btn"> <i class="fa-brands fa-instagram"> Instagram </i> </button>
     </a>
     
   </div>
