--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
    <img src="me1.png" alt="me1" class ="center" position: fixed>
     <br>
     <a href="https://github.com/conorwell"> 
-    <button class="social-btn"> <i class="fa-brands fa-github"> Github </i> </button>
+    <button class="social-btn"> <i class="fa-solid fa-house"></i> Github </button>
     </a>
 
     <a href="https://www.linkedin.com/in/conor-wellman-a70a93115/"> 
