--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
       <img src="phoenix.jpeg" alt="phoenix" class ="right">
     </div>
   </div>
+    <button class="btn"><i class="fa fa-home"></i></button>
 </div>
 
  
