--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
    <img src="me1.png" alt="me1" class ="center" position: fixed>
     <br>
     <a href="https://github.com/conorwell"> 
-    <button class="social-btn">  <i data-src="github.png"></i></button>
+    <button class="social-btn">  <i class="fa fa-github"></i></button>
     </a>
 
     <a href="https://www.linkedin.com/in/conor-wellman-a70a93115/"> 
-    <button class="social-btn"> <i data-src="linkedin.png"></i> </button>
+    <button class="social-btn"> <i class="fa fa-linkedIn"></i> </button>
     </a>
 
     <a href="https://www.instagram.com/conorwell/">
-  <button class="social-btn"> <i data-src="instagram.png"></i> </button>
+  <button class="social-btn"> <i class="fa fa-instagram"></i> </button>
     </a>
     
   </div>
