--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
       <img src="phoenix.jpeg" alt="phoenix" class ="right">
     </div>
   </div>
-</div>
-
- 
+  </div>
 
  </body>
+
+    <footer> Copyright Conor Wellman. Last Updated May, 2024</footer>
 
 
     </html>
