--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <!-- displays site properly based on user's device -->
    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
     <link rel="stylesheet" href="./assets/css/styles.css">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/brands.min.css" integrity="sha512-DJLNx+VLY4aEiEQFjiawXaiceujj5GA7lIY8CHCIGQCBPfsEG0nGz1edb4Jvw1LR7q031zS5PpPqFuPA8ihlRA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    <style>
 * {
   box-sizing: border-box;
@@ -67,15 +66,15 @@
    <img src="me1.png" alt="me1" class ="center" position: fixed>
     <br>
     <a href="https://github.com/conorwell"> 
-    <button class="social-btn">  <i class="fa-brands fa-github"></i></button>
+    <button class="social-btn">  <i class="fa fa-github"></i></button>
     </a>
 
     <a href="https://www.linkedin.com/in/conor-wellman-a70a93115/"> 
-    <button class="social-btn"> <i class="fa-brands fa-linkedIn"></i> </button>
+    <button class="social-btn"> <i class="fa fa-linkedIn"></i> </button>
     </a>
 
     <a href="https://www.instagram.com/conorwell/">
-  <button class="social-btn"> <i class="fa-brands fa-instagram"></i> </button>
+  <button class="social-btn"> <i class="fa fa-instagram"></i> </button>
     </a>
     
   </div>
