--- a/index.html
+++ b/index.html
@@ -139,8 +139,16 @@
         for lead climbing and bouldering, earning an alternate spot on the US Team and a pass down invite to world championships.
       Outdoors, I have climbed routes up to V14 and 5.14, my proudest being "The Multiverse" (V14) and "The Phoenix" (V14). I am the first
       male from Illinois to achieve boulders of this difficulty.</p>
-      <img src="multiverse.jpeg" alt="multiverse" class ="left">
-      <img src="phoenix.jpeg" alt="phoenix" class ="right">
+      <a href="https://www.youtube.com/watch?v=T-yZ6rvM46M&list=PLy5jnVltMplUXJnCzrXC_vQnKvATcRdlP"> 
+        <button class="youtube-btn"> 
+          <img src="multiverse.jpeg" alt="multiverse" class ="left"> 
+          The Multiverse </button> </a>
+      
+      <a href="https://youtu.be/Qw4ab3as4s4?si=dXEj8l8stIFtpOel"> 
+        <button class="youtube-btn"> 
+          <img src="phoenix.jpeg" alt="phoenix" class ="right"> 
+          The Phoenix </button> </a>
+      
     </div>
   </div>
   </div>
