--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@
 
       <div class="picture-col">
       <a href="https://www.youtube.com/watch?v=T-yZ6rvM46M&list=PLy5jnVltMplUXJnCzrXC_vQnKvATcRdlP"> 
-        <button class="youtube-btn"> 
+        <button class="multiverse-btn"> 
           <img src="multiverse.jpeg" alt="multiverse" class ="left"> </button> </a>
       </div>
 
       <div class="picture-col">
       <a href="https://youtu.be/Qw4ab3as4s4?si=dXEj8l8stIFtpOel"> 
-        <button class="youtube-btn"> 
+        <button class="phoenix-btn"> 
           <img src="phoenix.jpeg" alt="phoenix" class ="right"> 
           The Phoenix </button> </a>
       </div>
