--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       <div class="picture-col">
       <a href="https://www.youtube.com/watch?v=T-yZ6rvM46M&list=PLy5jnVltMplUXJnCzrXC_vQnKvATcRdlP"> 
         <button class="multiverse-btn"> 
-          <img src="multiverse.jpeg" alt="multiverse" class ="left"> </button> </a>
+          <img src="multiverse.jpeg" alt="multiverse" class ="left"> The Multiverse </button> </a>
       </div>
 
       <div class="picture-col">
