--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@
 
       <div class="picture-col">
       <a href="https://www.youtube.com/watch?v=T-yZ6rvM46M&list=PLy5jnVltMplUXJnCzrXC_vQnKvATcRdlP"> 
-        <button class="youtube-btn" style="background-image:url('Multiverse.jpg')">  The Multiverse </button> </a>
+        <button class="youtube-btn" style="background-image:url('multiverse.jpeg')">  <h3>The Multiverse </h3></button> </a>
       </div>
 
       <div class="picture-col">
       <a href="https://youtu.be/Qw4ab3as4s4?si=dXEj8l8stIFtpOel"> 
         <button class="youtube-btn" style="background-image:url('phoenix.jpeg')"> 
-          The Phoenix </button> </a>
+          <h3>The Phoenix</h3> </button> </a>
       </div>
         
     </div>
