--- a/index.html
+++ b/index.html
@@ -90,10 +90,11 @@
   <div class="column right">
     <div id = "projects">
       <h1> Projects </h1>
-      
-        <button type="button" class="prjct-btn"> <h2> AI Chatbot Website </h2> 
-        <p> AI chatbot website developed as part of the LevelUp Program at Colorado College. Uses Django Framework with HuggingFace AI library.</p>
-        </button>
+
+      <a href = "https://github.com/conorwell/levelUpProject">
+        <button type="button" class="prjct-btn"> <h2> AI Summarization Website </h2> 
+        <p> AI summarization website developed as part of the LevelUp Program at Colorado College. Uses Django Framework with HuggingFace AI library. Model was trained on academic papers, and will provide summaries of given text.</p>
+        </button></a>
      
       <a href = "https://github.com/conorwell/8aSoftnessIndex/tree/main/src">
       <button type="button" class="prjct-btn"> <h2>8a.nu Softness Calculator REST API</h2>
