--- a/index.html
+++ b/index.html
@@ -118,6 +118,12 @@
       
     <div id="resume">
       <h1> Experience </h1>
+      <h2>SURF Intern</h2>
+      <h3>NIST, June 2024 - August 2024</h3>
+      <p>•	Utilized advanced statistical methods in clock data analysis with Python and R to determine synchronization solutions
+•	Developed client-side network applications in C and Python to query NIST servers and support the NIST time scale
+•	Implemented Kalman Filtration synchronization algorithms to filter noise and predict future states, increasing performance
+</p>
       <a href="https://drive.google.com/file/d/1jpM2Guj6gEvp9PBvUcPtXHvNrkmSd9TN/view?usp=sharing"> 
         <button type="button" class="prjct-btn"> <h2>View Full Resume</h2> </button>
       </a>
