--- a/index.html
+++ b/index.html
@@ -119,11 +119,26 @@
     <div id="resume">
       <h1> Experience </h1>
       <h2>SURF Intern</h2>
-      <h3>NIST, June 2024 - August 2024</h3>
-      <p>•	Utilized advanced statistical methods in clock data analysis with Python and R to determine synchronization solutions
-•	Developed client-side network applications in C and Python to query NIST servers and support the NIST time scale
-•	Implemented Kalman Filtration synchronization algorithms to filter noise and predict future states, increasing performance
-</p>
+      <h3>NIST</h3>
+      <h4>June 2024 - August 2024</h4>
+      <p>Utilized advanced statistical methods in clock data analysis with Python and R to determine synchronization solutions</p>
+      <p>Developed client-side network applications in C and Python to query NIST servers and support the NIST time scale</p>
+      <p>Implemented Kalman Filtration synchronization algorithms to filter noise and predict future states, increasing performance</p>
+
+      <h2>Undergraduate Reserach Assistant</h2>
+      <h3>Colorado College Math Department</h3>
+      <h4>July 2023-August 2023</h4>
+      <p>Discovered a new family of harmonic mappings and minimal surfaces using calculus and complex analysis techniques</p>
+      <p>Modeled harmonic mappings and rosette minimal surfaces in Mathematica, printed surfaces using Ultimaker Cura</p>
+
+      <h2>Software Engineer Intern</h2>
+      <h3>Connamara Technologies</h3>
+      <h4>June 2023-July 2023</h4>
+      <p>Programmed deployment wizard to rapidly initialize new environments in AWS, reducing deployment time by up to 90%</p>
+      <p>Collaborated with engineers, marketing, and leadership to create an optimal program for all teams involved</p>
+      <p>Participated in daily standups and weekly demos, gaining hands on experience with agile and iterative development</p>
+      <p>Developed and executed unit tests to ensure code quality and reliability, enhancing the stability of software releases</p>
+
       <a href="https://drive.google.com/file/d/1jpM2Guj6gEvp9PBvUcPtXHvNrkmSd9TN/view?usp=sharing"> 
         <button type="button" class="prjct-btn"> <h2>View Full Resume</h2> </button>
       </a>
