--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
     <div id = "projects">
       <h1> Projects </h1>
 
+      <a href = "https://github.com/conorwell/neural_tsp">
+        <button type="button" class="prjct-btn"> <h2> AI Summarization Website </h2> 
+        <p>Research project comparing different optimization algorithms for solving the Trvaeling Salesperosn Project. Included Particle Swarm, Tabu, and Ant Colony Optimization. Created a new Neural Ant Colony Optimization using a transformer to preplace "pheromone", decreasing runtime by 25% while maintaining accuracy. Compared algorithms by runtime, memory use, function values, and approximation ratio.</p>
+        </button></a>
+
       <a href = "https://github.com/conorwell/levelUpProject">
         <button type="button" class="prjct-btn"> <h2> AI Summarization Website </h2> 
         <p> AI summarization website developed as part of the LevelUp Program at Colorado College. Uses Django Framework with HuggingFace AI library. Model was trained on academic papers, and will provide summaries of given text.</p>
@@ -110,11 +115,6 @@
       <button type="button" class="prjct-btn"> <h2>Clustering Algorithms</h2> 
       <p>Final project for CP307 Data Structures and Algorithms. In a group, we implemented and tested a variety of clustering alogrithms, including DBScan, Spectral Clustering, Hierarchical Clustering, and K-Means Clustering</p>
        </button></a>
-      
-      <a href="https://github.com/conorwell/Wordle-Solver"> 
-      <button type="button" class="prjct-btn"> <h2>Wordle Solver</h2> 
-      <p>Final project for CP222 Computer Science 2. In a group, we implemented and tested multiple algorithms for solving the New York Times "Wordle" game.</p>
-      </button></a>
       
     <div id="resume">
       <h1> Experience </h1>
