--- a/index.html
+++ b/index.html
@@ -66,10 +66,12 @@
     <h1>Conor Wellman</h1>
     <p>I'm an aspiring software engineer studying Computer
        Science and Mathematics at Colorado College. I've worked as a software engineering intern
-       at Connamara Technologies, and as a research assistant in the field of complex analysis,
-       where I discovered a new family of harmonic mappings and minimal surfaces. I'm looking forward to working 
-       at NIST this summer as part of the SURF program to develop software for the atomic clock 
-       system! In my free time, I pursue rock climbing at a semi-professional level and play guitar. 
+       at Connamara Technologies, where I developed a deployment wizard to automoate enviornment initialization, 
+      and in the Time and Frequency Division at NIST, where I implemented a Kalman Filtration Algorithm for atomic clock analysis. 
+      In my work as a research assistant in the field of complex analysis, I discovered a new family of harmonic mappings, 
+      as well as an associated family of minimal surfaces corresponding to the lifts of these mappings.
+      I am currently looking for work in software engineering, machine learning, data science, and analysis. 
+      In my free time, I pursue rock climbing at a semi-professional level and play guitar. 
      </p>
    <img src="me1.png" alt="me1" class ="center" position: fixed>
     <br>
@@ -92,7 +94,7 @@
       <h1> Projects </h1>
 
       <a href = "https://github.com/conorwell/neural_tsp">
-        <button type="button" class="prjct-btn"> <h2> AI Summarization Website </h2> 
+        <button type="button" class="prjct-btn"> <h2> Neural Traveling Salesperson Solver </h2> 
         <p>Research project comparing different optimization algorithms for solving the Trvaeling Salesperosn Project. Included Particle Swarm, Tabu, and Ant Colony Optimization. Created a new Neural Ant Colony Optimization using a transformer to preplace "pheromone", decreasing runtime by 25% while maintaining accuracy. Compared algorithms by runtime, memory use, function values, and approximation ratio.</p>
         </button></a>
 
